--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /build
 /dev
 /src/App/Staging
+/src/App/Project.hpp
+/src/App/Version.rc
 /support/cet/**/.*
 /support/cet/*.log
 /support/cet/*.sqlite3
